# set-game

./: .gitignore  README.md  pyproject.toml
src/set_game/simulation/: main.py  plotting.py  simulator.py
